[package]
name = "rhix_converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = { version = "4", features = ["derive"] }
flate2 = "1.0.24"
glob = "0.3.0"
silv = { git = "https://github.com/SuperWinner50/silv-test.git" }
